# liboreore

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  CMakeSettings.json  LICENSE  README.md  main.c  makefile
junk/: statemachine.hpp  test.cpp
old/src/: oreore.cpp  oreore.h
old/test/: statemachine_test.cpp
src/: CMakeLists.txt  Procedures.hpp  SimplUtil.hpp  clock.hpp  statemachine.hpp
src/util/: listener.hpp  queue.hpp  statemachine.hpp
test/: CMakeLists.txt  clock_test.cpp  listener_test.cpp  main.c  main.cpp  queue_test.cpp  statemachine_test.cpp
